unused/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: intens-be-service
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intens-be-service
                port:
                  number: 8000
    - host: intens.praksa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intens-fe-service
                port:
                  number: 3000
